--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -12,6 +13,7 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/styled-components": "^5.1.22",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
@@ -19,12 +21,14 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0",
     "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
+    "superstruct": "^0.15.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
